<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cl.ckelar.android.lense.CreditosActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"  >

        <TextView
            android:id="@+id/txt_cred_tit_autor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/txt_tit_autor"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txt_autor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/txt_cred_tit_autor"
            android:layout_toRightOf="@+id/txt_cred_tit_autor"
            android:text="@string/txt_tit_autor_name"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txt_tit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_cred_tit_autor"
            android:layout_marginTop="10dp"
            android:text="@string/txt_tit_email"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txt_tit_email"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/txt_tit_email"
            android:layout_toRightOf="@+id/txt_tit_email"
            android:autoLink="email"
            android:text="@string/txt_tit_email_name" />

        <TextView
            android:id="@+id/txt_tit_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_tit_email"
            android:layout_marginTop="10dp"
            android:text="@string/txt_tit_website"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txt_tit_website"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/txt_tit_website"
            android:layout_toRightOf="@+id/txt_tit_website"
            android:autoLink="web"
            android:text="@string/txt_tit_website_name" />

        <TextView
            android:id="@+id/txt_tit_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_tit_website"
            android:layout_marginTop="10dp"
            android:text="@string/txt_tit_version"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txt_tit_version"
            android:layout_toEndOf="@+id/txt_tit_website"
            android:layout_toRightOf="@+id/txt_tit_website"
            android:text="@string/txt_tit_version_name" />
    </RelativeLayout>
</LinearLayout>
